--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web para German</title>
 
     <!--links para estilo video js-->
 
-    <link href="https://unpkg.com/video.js@7/dist/video-js.min.css" rel="stylesheet"/>
-    
+    <link
+      href="https://unpkg.com/video.js@7/dist/video-js.min.css"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- BOX ICONS -->
 
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
-
-</head>
-<body>
-<!-- Seccion Nav  -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Seccion Nav  -->
     <header class="header">
-      <a href="#" class="logo">JMC.<span class="animate" style="--i:1;"></span></a>
+      <a href="#" class="logo"
+        >JMC.<span class="animate" style="--i: 1"></span
+      ></a>
 
-      <div class="bx bx-menu" id="menu-icon"> <span class="animate" style="--i:2;"></span></div>
+      <div class="bx bx-menu" id="menu-icon">
+        <span class="animate" style="--i: 2"></span>
+      </div>
 
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -32,129 +40,213 @@
         <a href="#contact">Contact</a>
 
         <span class="active-nav"></span>
-        <span class="animate" style="--i:2;"></span>
+        <span class="animate" style="--i: 2"></span>
       </nav>
     </header>
-<!-- Seccion Home-->
+    <!-- Seccion Home-->
     <section class="home show-animate" id="home">
       <div class="home-content">
         <h1>Hola, Soy <span>German</span></h1>
         <div class="text-animate">
           <h3>Filmador de videos con Dron</h3>
-           <span class="animate" style="--i:3;"></span>
+          <span class="animate" style="--i: 3"></span>
         </div>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto error
           enim at quam deleniti vitae itaque, odit quisquam magni! Quia amet ab
           quidem natus, alias unde accusantium!
-          <span class="animate" style="--i:4;"></span>
+          <span class="animate" style="--i: 4"></span>
         </p>
         <div class="btn-box">
           <a href="#" class="btn">Contratame</a>
           <a href="#" class="btn">Hablemos</a>
-          <span class="animate" style="--i:5;"></span>
+          <span class="animate" style="--i: 5"></span>
         </div>
       </div>
       <div class="home-sci">
         <a href="#"><i class="bx bxl-linkedin-square"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
         <a href="#"><i class="bx bxs-envelope"></i></a>
-        <span class="animate" style="--i:6;"></span>
+        <span class="animate" style="--i: 6"></span>
       </div>
 
       <div class="home-imgHover show-animate"></div>
-      
+
       <!--<span class="animate home-img" style="--i:7;"></span>-->
     </section>
 
     <!-- Seccion About -->
     <section class="about" id="about">
-  <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
-  <div class="about-img">
-    <img src="img/logo.jpg" alt="" />
-    <span class="circle-spin"></span>
-    <span class="animate scroll" style="--i:2;"></span>
-  </div>
-  <div class="about-content">
-    <h3>Filmador de videos con Dron<span class="animate scroll" style="--i:3;"></span></h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui autem sit mollitia voluptatum quod, ipsam ipsum totam doloremque, sunt neque quibusdam cumque dolor cupiditate magni a rerum architecto. Commodi, aliquid!
-      <span class="animate scroll" style="--i:4;"></span>
-    </p>
-    <div class="btn-box btns">
-      <a href="#" class="btn">Leemé</a>
-      <span class="animate scroll" style="--i:5;"></span>
-    </div>
-  </div>
-</section>
+      <h2 class="heading">
+        About <span>Me</span><span class="animate scroll" style="--i: 1"></span>
+      </h2>
+      <div class="about-img">
+        <img src="img/perfil.jpg" alt="" />
+        <span class="circle-spin"></span>
+        <span class="animate scroll" style="--i: 2"></span>
+      </div>
+      <div class="about-content">
+        <h3>
+          Filmador de videos con Dron<span
+            class="animate scroll"
+            style="--i: 3"
+          ></span>
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui autem
+          sit mollitia voluptatum quod, ipsam ipsum totam doloremque, sunt neque
+          quibusdam cumque dolor cupiditate magni a rerum architecto. Commodi,
+          aliquid!
+          <span class="animate scroll" style="--i: 4"></span>
+        </p>
+        <div class="btn-box btns">
+          <a href="#" class="btn">Leemé</a>
+          <span class="animate scroll" style="--i: 5"></span>
+        </div>
+      </div>
+    </section>
 
-<section class="galery">
-    <video class="reproductor video-js vjs-16-9 vjs-big-play-centred" data-setup="{}" controls id="fm-video">
-        <source src="video/video1.mp4" type="video/mp4">
-    </video>
-</section>
+    <section class="galery">
+      <video
+        class="reproductor video-js vjs-16-9 vjs-big-play-centred"
+        data-setup="{}"
+        controls
+        id="fm-video"
+      >
+        <source src="video/video1.mp4" type="video/mp4" />
+      </video>
+    </section>
 
-<!-- contact section design -->
+    <section class="galery-video">
+      <div class="grid-container">
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
 
-<section class="contact" id="contact">
-  <h2 class="heading">Contact <span>Me! </span><span class="animate scroll" style="--i:1;"></span></h2>
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
 
-  <form action="#">
-    <div class="input-box">
-      <div class="input-field">
-        <input type="text" placeholder="Full Name" required>
-        <span class="focus"></span>
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+
+        <div class="grid-item" onclick="reproducirVideo('video1.mp4')">
+          <video controls>
+            <source src="video1.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact section design -->
+
+    <section class="contact" id="contact">
+      <h2 class="heading">
+        Contact <span>Me! </span
+        ><span class="animate scroll" style="--i: 1"></span>
+      </h2>
+
+      <form action="#">
+        <div class="input-box">
+          <div class="input-field">
+            <input type="text" placeholder="Full Name" required />
+            <span class="focus"></span>
+          </div>
+
+          <div class="input-field">
+            <input type="text" placeholder="Email Address" required />
+            <span class="focus"></span>
+          </div>
+          <span class="animate scroll" style="--i: 3"></span>
+        </div>
+
+        <div class="input-box">
+          <div class="input-field">
+            <input type="text" placeholder="Mobile Number" required />
+            <span class="focus"></span>
+          </div>
+
+          <div class="input-field">
+            <input type="text" placeholder="Email Subject" required />
+            <span class="focus"></span>
+          </div>
+          <span class="animate scroll" style="--i: 5"></span>
+        </div>
+
+        <div class="textarea-field">
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+            required
+          ></textarea>
+          <span class="focus"></span>
+          <span class="animate scroll" style="--i: 7"></span>
+        </div>
+
+        <div class="btn-box btns">
+          <button type="submit" class="btn">Submit</button>
+          <span class="animate scroll" style="--i: 9"></span>
+        </div>
+      </form>
+    </section>
+
+    <!-- Footer -->
+
+    <footer class="footer">
+      <div class="footer-text">
+        <p>
+          Copyright &copy; 2024 by JMC desarrollo Web | All Rights Reserved.
+        </p>
+        <span class="animate scroll" style="--i: 1"></span>
       </div>
 
-      <div class="input-field">
-        <input type="text" placeholder="Email Address" required>
-        <span class="focus"></span>
+      <div class="footer-iconTop">
+        <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        <span class="animate scroll" style="--i: 3"></span>
       </div>
-      <span class="animate scroll" style="--i:3;"></span>
-    </div>
+    </footer>
 
-    <div class="input-box">
-      <div class="input-field">
-        <input type="text" placeholder="Mobile Number" required>
-        <span class="focus"></span>
-      </div>
-
-      <div class="input-field">
-        <input type="text" placeholder="Email Subject" required>
-        <span class="focus"></span>
-      </div>
-      <span class="animate scroll" style="--i:5;"></span>
-    </div>
-
-    <div class="textarea-field">
-      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-      <span class="focus"></span>
-      <span class="animate scroll" style="--i:7;"></span>
-    </div>
-
-    <div class="btn-box btns">
-      <button type="submit" class="btn">Submit</button>
-      <span class="animate scroll" style="--i:9;"></span>
-    </div>
-  </form>
-</section>
-
-<!-- Footer -->
-
-<footer class="footer">
-  <div class="footer-text">
-    <p>Copyright &copy; 2024 by JMC desarrollo Web | All Rights Reserved.</p>
-    <span class="animate scroll" style="--i:1;"></span>
-  </div>
-
-  <div class="footer-iconTop">
-    <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
-    <span class="animate scroll" style="--i:3;"></span>
-  </div>
-</footer>
-
-
-   <script src="js/main.js"></script> 
-   <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script> 
-</body>
+    <script src="js/main.js"></script>
+    <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+  </body>
 </html>
